INCLUDES=-I$(top_srcdir)/include
noinst_LTLIBRARIES=$(top_srcdir)/lib/libcommon.la
SUBDIRS=comm daemon log  odbc sys Timer util xml
__top_srcdir__lib_libcommon_la_SOURCES=
__top_srcdir__lib_libcommon_la_LIBADD=comm/libcomm.la \
									  daemon/libdaemon.la \
									  log/liblog.la \
									  odbc/libodbc.la \
									  sys/libsys.la \
									  Timer/libtimer.la \
									  util/libutil.la \
									  xml/libxml.la
