INCLUDES=-I$(top_srcdir)/include
noinst_LTLIBRARIES=libcomm.la
SUBDIRS=
libcomm_la_SOURCES=Agent.cpp \
				   AgentManager.cpp \
				   BufferManager.cpp \
				   Epoll.cpp \
				   EpollEvent.cpp \
				   SocketAddress.cpp \
				   TaskManager.cpp \
				   TCPAgent.cpp \
				   TCPSocket.cpp \
				   Tool.cpp \
				   UDPAgent.cpp \
				   UDPSocket.cpp \
				   Reader.cpp \
				   UnxDmnAgent.cpp \
				   UnxDmnSocket.cpp \
				   Writer.cpp \
				   UDPWriter.cpp
